# image_to_skill

./: README.md  cli.py  pyproject.toml
image_to_skill/: README.md  __main__.py  code_generation.py  image_processor.py
image_to_skill_pyqt/: README.md  __init__.py  __main__.py  code_generation.py  gui.py  project.ui
tests/: test_image_to_skill.py
