[tool.poetry]
name = "image_to_skill"
version = "0.1.0"
description = "Convert images to MythicMobs skills."
license = "Apache-2.0"
authors = ["Woong Ze Yi <woongzeyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.2"
filetype = "^1.0.8"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"
pylint = "^2.12.1"
autopep8 = "^1.6.0"

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
